--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+}
+.App{
+  background: #22c1c3;
+background: -webkit-linear-gradient(to right, #fdbb2d, #22c1c3);
+background: linear-gradient(to right, #fdbb2d, #22c1c3);
+height: 100vh;
+}
+.App img{
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+.app-container{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2rem;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.137);
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+.app-container .input-field{
+  border: none;
+  border-bottom: 1px solid black;
+  outline: none;
+  padding: 10px 0;
+  width: 100%;
+  letter-spacing: 1px;
+  text-align: left;
+  background: transparent;
+}
+.app-container .result .min-max{
+  display: flex;
+  justify-content: space-around;
+}
+.app-container .result .min-max .divider{
+  border: 1px solid rgba(0, 0, 0, 0.541);
+}
+@media screen and (max-width: 425px) {
+  .app-container{
+    width: 80%;
+  }
+}
+@media screen and (max-width: 320px) {
+  .app-container{
+    width: 95%;
+  }
 }
